--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,13 +1,32 @@
-FROM node:18.9.1
+# Build stage
+FROM node:18.9.1 as builder
 
 WORKDIR /app
-
-Copy package.json  .
-
+COPY package*.json ./
 RUN npm install
-
 COPY . .
+RUN npm run build
 
-EXPOSE 5173
+# Production image
+FROM nginx:alpine
+COPY --from=builder /app/dist /usr/share/nginx/html
 
-CMD ["npm","run","dev", "--", "--host"]
+# Optional: Custom nginx config
+COPY nginx.conf /etc/nginx/conf.d/default.conf
+
+EXPOSE 80
+CMD ["nginx", "-g", "daemon off;"]
+
+# FROM node:18.9.1
+
+# WORKDIR /app
+
+# Copy package.json  .
+
+# RUN npm install
+
+# COPY . .
+
+# EXPOSE 5173
+
+# CMD ["npm","run","dev", "--", "--host"]
