--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,13 +1,23 @@
 FROM node:18.9.1
 
 WORKDIR /app
-
-Copy package.json  .
-
+COPY package*.json ./
 RUN npm install
-
 COPY . .
 
 EXPOSE 5000
+CMD ["npm", "start"]
 
-CMD ["npm","start"]
+# FROM node:18.9.1
+
+# WORKDIR /app
+
+# Copy package.json  .
+
+# RUN npm install
+
+# COPY . .
+
+# EXPOSE 5000
+
+# CMD ["npm","start"]
