--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
 PORT=5000
-MONGO_URI=mongodb+srv://ritesh:ritesh46@cluster0.llbotrp.mongodb.net/Todo?retryWrites=true&w=majority&appName=Cluster0
+//MONGO_URI=mongodb+srv://ritesh:ritesh46@cluster0.llbotrp.mongodb.net/Todo?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb://mongo:27017/Todo
